@@ -1,3 +1,7 @@
+2012-05-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Support for
+  2 KB and 4 KB ROMs used in early Atari cartridges.
+
 2012-05-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/CREDITS, DOC/USAGE:
   Committing patch by Jakub Husak: Support for the SIC! cartridge mapping
